--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,158 @@
 @import "tailwindcss";
 
+.jua-regular {
+  font-family: "Jua", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.jersey-15-regular {
+  font-family: "Jersey 15", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.jua {
+  font-family: "Jua", sans-serif;
+}
+
+.jersey {
+  font-family: "Jersey 15", sans-serif;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --color-beige: #ffe9cc;
+  --color-background: white;
+  --color-ttt-orange: #dc9b46;
+  --color-ttt-dark-orange: #bf6c24;
+  --color-ttt-pink: #ffb8a1;
+  --color-ttt-dark-pink: #d2779e;
+  --text-shadow-stroke: 0.8px 1px 0px #000000;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@theme {
+  --animate-pumping: pumping 1s ease-in-out infinite;
+  --animate-scale: scale 1s ease-in-out infinite;
+  --animate-popup: popup 0.3s ease-out forwards;
+  --animate-popout: popout 0.3s ease-out forwards;
+  --animate-fadeIn: fadeIn 0.3s ease-out forwards;
+  --animate-fadeOut: fadeOut 0.3s ease-out forwards;
+  --animate-pump-once: pumping-select 0.3s ease-in-out 0.2s forwards;
+  --animate-slow-spin: slow-spin 3s linear infinite;
+  --animate-bounce2: bounce2 1s ease-in-out infinite;
+
+  @keyframes pumping {
+    0%,
+    100% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.05);
+    }
+  }
+
+  @keyframes pumping-select {
+    0% {
+      transform: scale(1);
+    }
+    20% {
+      transform: scale(0.9);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
+  @keyframes popup {
+    0% {
+      opacity: 0;
+      transform: scale(0.9);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  @keyframes popout {
+    0% {
+      opacity: 1;
+      transform: scale(1);
+    }
+    100% {
+      opacity: 0;
+      transform: scale(0.9);
+    }
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
+  @keyframes slow-spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+@keyframes bounce2 {
+  0% {
+    transform: translateY(-10%) scaleY(1);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: scaleX(1.10);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  100% {
+    transform: translateY(-10%) scaleY(1);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
 }
 
+}
+
 body {
-  background: var(--background);
+  font-family: "Jersey 15", sans-serif;
+  background-color: #fffbd0;
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+@keyframes scale-up {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.09);
+  }
+}
+
+.scale-on-hover {
+  display: inline-block;
+  transition: transform 0.3s ease-in-out, border 0.3s ease-in-out;
+}
+
+.scale-on-hover:hover {
+  transform: scale(1.05);
+  animation-delay: 300ms;
 }
